--- a/README.org
+++ b/README.org
@@ -1,17 +1,20 @@
-* Readline Complete
-This package interacts with a shell's native completion functionality to provide the same completions in emacs that you would get from the shell itself. Currently this has been tested in
+* Native-Complete Complete
+This package interacts with a shell's native completion functionality
+to provide the same completions in Emacs that you would get from the
+shell itself. Currently this has been tested in
 
 - bash
 - csh
 - various CAD tool shells
 
 ** Emacs setup
-This package contains two completion functions; ~readline-complete~ and
-~company-readline~. ~readline-complete~ is a completion at point function
-(capf) and can be enabled by adding it to
-~completion-at-point-functions~ in a shell buffer. ~company-readline~ is
-an asynchronous backend for the company completion framework. It is
-enabled by adding it to ~company-backends~.
+This package contains two completion functions;
+~native-complete-at-point~ and ~company-native-complete~.
+~native-complete-at-point~ is a "completion at point function" (capf) and
+can be enabled by adding it to ~completion-at-point-functions~ in a
+shell buffer. ~company-native-complete~ is an asynchronous backend for
+the company completion framework. It is enabled by adding it to
+~company-backends~.
 
 These functions look at the shell prompt to determine which completion
 style to use. A completion style is the mechanism used to get the
@@ -25,22 +28,28 @@ styles:
 - tab ::  ~<tab>~
 
 Which completion mechanism to use is determined by
-~readline-style-regex-alist~. This variable is a alist of ~(prompt-regex
-. mechanism)~ pairs. If the prompt of the current shell matches
-~prompt-regex~ then the corresponding ~mechanism~ will be used. For
-example, if your prompt is of the form ~user>~ and your shell is bash,
-you could you the following setting to configure that.
+~native-complete-style-regex-alist~. This variable is a alist of
+~(prompt-regex . mechanism)~ pairs. If the prompt of the current shell
+matches ~prompt-regex~ then the corresponding ~mechanism~ will be used.
+For example, if your prompt is of the form ~user>~ and your shell is
+bash, you could you the following setting to configure that.
 #+BEGIN_SRC elisp
-  (setq readline-style-regex-alist '(("[a-z]+> " . bash)))
+  (setq native-complete-style-regex-alist '(("[a-z]+> " . bash)))
 #+END_SRC
 
 To test if your regex is correct, evaluate
- ~M-: (readline-get-completion-style)~ when the point is at an empty
+ ~M-: (native-complete-get-completion-style)~ when the point is at an empty
 prompt. The default completion mechanism is ~tab~.
+
+~native-complete-exclude-regex~ is a regular expression that is used to
+match potential candidates that should not appear in the final
+completion list.
 
 ** shell setup
 *** bash
-you will need to execute ~readline-setup-bash~ /before/ you load your first shell. The following configuration is recommended for the best experience.
+you will need to execute ~native-complete-setup-bash~ /before/ you load
+your first shell. The following configuration is recommended for the
+best experience.
 #+BEGIN_SRC sh
   export HISTCONTROL=ignoreboth
   bind "set page-completions off"
@@ -49,7 +58,8 @@ you will need to execute ~readline-setup-bash~ /before/ you load your first shel
   bind "set completion-query-items -1"
 #+END_SRC
 
-Also note that completion in bash works best with command echoing turned off. This can be set using TTY.
+Also note that completion in bash works best with command echoing
+turned off. This can be set using TTY.
 #+BEGIN_SRC sh
   stty -echo
 #+END_SRC
