--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* Native-Complete Complete
+* Native complete
 This package interacts with a shell's native completion functionality
 to provide the same completions in Emacs that you would get from the
 shell itself. Currently this has been tested in
