--- a/README.org
+++ b/README.org
@@ -46,8 +46,7 @@ potential candidates that should not appear in the final completion list.
 
 ** shell setup
 *** bash
-Run ~native-complete-setup-bash~ in Emacs /before/ you load
-your first shell.
+Run ~native-complete-setup-bash~ in Emacs /before/ you load your first shell.
 #+BEGIN_SRC elisp
   (with-eval-after-load 'shell
     (native-complete-setup-bash))
@@ -66,10 +65,7 @@ This can be set using TTY.
 #+END_SRC
 
 *** csh
-Set the max candidates to a sufficiently high number for the best experience.
 Make sure editing is enabled.
 #+BEGIN_SRC sh
-  set listmax=5000
-  set listmaxrows=500
   set edit
 #+END_SRC
