--- a/README.org
+++ b/README.org
@@ -1,6 +1,9 @@
 * Native complete
 This package interacts with a shell's native completion functionality to provide
 the same completions in Emacs that you would get from the shell itself.
+
+[[file:images/demo.gif]]
+
 Currently this has been tested in
 
 - bash
