--- a/README.org
+++ b/README.org
@@ -17,11 +17,11 @@ Currently this has been tested in
 ** Emacs setup
 This project contains two completion packages, ~native-complete~ for basic
 completion and ~company-native-complete~ for ~company-mode~. ~native-complete~
-provides which is a "completion at point function" (capf) and can be enabled by
-adding it to ~completion-at-point-functions~ in a shell buffer.
-~company-native-complete~ provides a function of the same name which is an
-asynchronous backend for the company completion framework. It is enabled by
-adding it to ~company-backends~.
+provides ~native-complete-at-point~ which is a "completion at point function"
+(capf) and can be enabled by adding it to ~completion-at-point-functions~ in a
+shell buffer. ~company-native-complete~ provides a function of the same name which
+is an asynchronous backend for the company completion framework. It is enabled
+by adding it to ~company-backends~.
 
 These functions look at the shell prompt or process name to determine which
 completion style to use. A completion style is the mechanism used to get the
